hide overflow on Splash page preventing strange widening of view area

--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -4,7 +4,7 @@
 .splash {
   width: 80%;
   min-width: 600px;
-  height: 800px;
+  // height: 800px;
   position: relative;
   padding: 80px;
   top: -100px;
@@ -12,22 +12,24 @@
   margin-top: 20px;
   z-index: 20;
 
-  img {
-    max-height: 800px !important;
-    max-width: 1000px !important;
-  }
+  // img {
+  //   max-height: 800px !important;
+  //   max-width: 800px !important;
+  // }
 }
 .cb-slideshow,
 .cb-slideshow:after {
     position: relative;
-    height: 560px;
-    top: 100px;
+    width: 100%;
+    height: 600px;
+    top: 80px;
     left: 0px;
     z-index: 0;
+    overflow: hidden;
 }
 .cb-slideshow li span {
     width: 100%;
-    height: 800px;
+    height: 100%;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -35,7 +37,7 @@
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: none;
-    border-radius: 7%;
+    border-radius: 20px;
     opacity: 0;
     z-index: 0;
 	  -webkit-backface-visibility: hidden;
@@ -45,13 +47,11 @@
     -ms-animation: imageAnimation 36s linear infinite 0s;
     animation: imageAnimation 36s linear infinite 0s;
 }
-.cb-slideshow li {
-  width: 100vw;
-}
+
 .cb-slideshow li div {
     z-index: 50;
     position: absolute;
-    bottom: 30%;
+    bottom: 50%;
     left: 0px;
     width: 100%;
     text-align: center;
@@ -65,12 +65,10 @@
 .cb-slideshow li div h3 {
     position: relative;
     top: 20px;
-    margin: 0 auto;
     font-family: $handwritten;
-    font-size: 48px;
-    max-width: 800px;
     padding: 0;
-    line-height: 200px;
+    font-size: 64px;
+    line-height: 150px;
     color: $base-lightest;
     text-shadow:
      -1px -1px 0 #000,
